--- a/Scripts/htmlproject/templates/nextpage.html
+++ b/Scripts/htmlproject/templates/nextpage.html
@@ -38,8 +38,8 @@
             <td>Rs.{{product.price}}</td>
             <td>{{product.description}}</td>
             <td>
-                <a href="{% url 'home' %}?action=update&product_id={{product.pk}}" class="btn btn-primary btn-sm">Update</a>
-                <a href="{% url 'home' %}?action=delete&product_id={{product.pk}}" class="btn btn-danger btn-sm">Delete</a>
+                <a href="{% url 'update_product' product.pk %}" class="btn btn-primary btn-sm">Update</a>
+                <a href="{% url 'delete_product' product.pk %}" class="btn btn-danger btn-sm">Delete</a>
             </td>
         </tr>
         {% endfor %}
@@ -57,30 +57,30 @@
                         </h4>
                     </div>
                     <div class="card-body">
-                        {% if request.GET.action == 'update' %}
-                        <!-- Update Form -->
+                        {% if action == 'update' %}
                         <form method="POST">
                             {% csrf_token %}
                             <div class="form-group">
                                 <label for="pname">Product Name:</label>
-                                <input type="text" name="pname" required class="form-control" value="{{ selected_product.name }}" />
+                                <input type="text" name="pname" required class="form-control" value="{{ product.name }}" />
                             </div>
                             <div class="form-group">
                                 <label for="price">Product Price:</label>
-                                <input type="text" name="price" required class="form-control" value="{{ selected_product.price }}" />
+                                <input type="text" name="price" required class="form-control" value="{{ product.price }}" />
                             </div>
                             <div class="form-group">
                                 <label for="description">Product Description:</label>
-                                <textarea type="text" name="description" required class="form-control" rows="3">{{ selected_product.description }}</textarea>
-                            </div><br>
+                                <textarea type="text" name="description" required class="form-control" rows="3">{{ product.description }}</textarea>
+                            </div>
+                            <br>
                             <div class="text-center">
                                 <button type="submit" class="btn btn-dark">Update Product</button>
                                 <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
                             </div>
                         </form>
-                        {% elif request.GET.action == 'delete' %}
+                        {% elif action == 'delete' %}
                         <!-- Delete Form -->
-                        <p>Are you sure you want to delete the product {{ selected_product.name }}?</p>
+                        <p>Are you sure you want to delete the product {{ product.name }}?</p>
                         <form method="POST">
                             {% csrf_token %}
                             <div class="d-flex justify-content-between">
